--- a/site/index.html
+++ b/site/index.html
@@ -6,10 +6,10 @@
     <!-- Mobile Specific Metas -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <!-- TUKTUK -->
-    <link rel="stylesheet" href="package/tuktuk.css">
-    <link rel="stylesheet" href="package/tuktuk.theme.css">
+    <link rel="stylesheet" href="../package/tuktuk.css">
+    <link rel="stylesheet" href="../package/tuktuk.theme.css">
     <!-- TUKTUK.WIDGETS -->
-    <link rel="stylesheet" href="package/tuktuk.icons.css">
+    <link rel="stylesheet" href="../package/tuktuk.icons.css">
     <style>
           body > header .tapquo > img {
               max-height: 48px; }
@@ -87,7 +87,7 @@
         </div>
     </section>
 
-    <!-- ========================== Downloads ========================== -->
+    <!-- ========================== DOWNLOADS ========================== -->
     <section class="padding bck darkest ">
         <div class="row text center margin-bottom">
             <div class="column_10 offset_1">
@@ -102,6 +102,31 @@
             </div>
             <div class="column_4">
                 <a href="https://github.com/soyjavi/tuktuk" class="button large anchor secondary"><span class="icon github"></span>Source on Github</a>
+            </div>
+        </div>
+    </section>
+
+    <!-- ========================== EXAMPLES ========================== -->
+    <section class="padding bck dark ">
+        <div class="row text center margin-bottom">
+            <div class="column_10 offset_1">
+                <h1 class="text thin color theme">Examples</h1>
+                <h3 class="text color white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. At, quas, esse!</h3>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="column_3">
+                a
+            </div>
+            <div class="column_3">
+                b
+            </div>
+            <div class="column_3">
+                c
+            </div>
+            <div class="column_3">
+                d
             </div>
         </div>
     </section>
@@ -849,6 +874,6 @@
 
     <!-- TUKTUK.WIDGETS -->
     <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
-    <script src="package/tuktuk.js"></script>
+    <script src="../package/tuktuk.js"></script>
 </body>
 </html>
