--- a/site/examples/profile.html
+++ b/site/examples/profile.html
@@ -51,17 +51,17 @@
         </div>
     </section>
 
-<section class="underline bck darkest">
-    <div class="row text center">
-        <nav class="column_12 group text bold">
-            <a href="#" class="active"><span class="icon user"></span>item.active</a>
-            <a href="#"><span class="icon cube"></span>item</a>
-            <a href="#"><span class="icon cube"></span>item</a>
-            <a href="#"><span class="icon cube"></span>item</a>
-            <a href="#"><span class="icon cube"></span>item</a>
-        </nav>
-    </div>
-</section>
+    <section class="underline bck darkest">
+        <div class="row text center">
+            <nav class="column_12 group text bold">
+                <a href="#" class="active"><span class="icon user"></span>item.active</a>
+                <a href="#"><span class="icon cube"></span>item</a>
+                <a href="#"><span class="icon cube"></span>item</a>
+                <a href="#"><span class="icon cube"></span>item</a>
+                <a href="#"><span class="icon cube"></span>item</a>
+            </nav>
+        </div>
+    </section>
 
     <section class="margin-bottom">
         <div class="row">
@@ -81,9 +81,24 @@
             <div data-tip="Hello world!" class="tip-right column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
             <div data-tip="Hello world!" class="tip-bottom column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
             <div data-tip="Hello world!" class="tip-left column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+             <div data-tip="Hello world!" class="tip-top column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-right column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-bottom column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-left column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-top column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-right column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-bottom column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-left column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+             <div data-tip="Hello world!" class="tip-top column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-right column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-bottom column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-left column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-top column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-right column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-bottom column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
+            <div data-tip="Hello world!" class="tip-left column_3 bck light text center margin-bottom padding-top padding-bottom">thumb</div>
         </div>
     </section>
-
 
     <footer class="bck light padding">
         <div class="row color">
